--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.11"
+    "@astrojs/netlify": "^6.3.2",
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.11",
+    "firebase": "^11.7.1",
+    "sweetalert2": "^11.21.0",
+    "tailwindcss": "^4.1.5"
   }
 }
